modules/cli/src/test/resources/good/efsm/gcontinue/choiceunguarded/Test01a.scr
module good.efsm.gcontinue.choiceunguarded.Test01a;


// Cf. -minfsm
global protocol Proto1(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			continue X;
		}
		or
		{
			continue X;
		}
	}
}


