modules/cli/src/test/resources/bad/wfchoice/enabling/twoparty/Test01a.scr
module bad.wfchoice.enabling.twoparty.Test01a;


global protocol Proto1(role A, role B, role C, role D)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			continue X;
		}
		1() from C to D;  // Enabled violation once unfolded
	}
}

